crates/squealy/tests/compile_fail/explicit_insert_columns_reject_column_expressions.stderr
error[E0277]: the trait bound `Expr<'_, AddExpr<CounterCount, {integer}>, squealy::BinaryExprAst<squealy::ColumnExprAst<CounterCount>, squealy::LiteralExprAst<{integer}>>>: squealy::query::IntoInsertAssignmentValue<CounterCount>` is not satisfied
  --> tests/compile_fail/explicit_insert_columns_reject_column_expressions.rs:15:10
   |
15 |         .row((counter.count + 1,))
   |          ^^^ unsatisfied trait bound
   |
   = help: the trait `ExprKind` is not implemented for `Expr<'_, AddExpr<CounterCount, {integer}>, squealy::BinaryExprAst<squealy::ColumnExprAst<CounterCount>, squealy::LiteralExprAst<{integer}>>>`
   = help: the following other types implement trait `ExprKind`:
             AddExpr<L, R>
             AvgExpr<K>
             CountExpr<K>
             CounterCount
             CounterId
             DivideExpr<L, R>
             MaxExpr<K>
             MinExpr<K>
           and $N others
   = note: required for `Expr<'_, AddExpr<CounterCount, {integer}>, squealy::BinaryExprAst<squealy::ColumnExprAst<CounterCount>, squealy::LiteralExprAst<{integer}>>>` to implement `squealy::query::IntoInsertAssignmentValue<CounterCount>`
   = note: required for `squealy::NonNullableColumn` to implement `squealy::IntoInsertColumnValue<CounterCount, Expr<'_, AddExpr<CounterCount, {integer}>, squealy::BinaryExprAst<squealy::ColumnExprAst<CounterCount>, squealy::LiteralExprAst<{integer}>>>>`
   = note: required for `(CounterCount,)` to implement `squealy::InsertColumnValues<Counter<'_>, (Expr<'_, AddExpr<CounterCount, {integer}>, squealy::BinaryExprAst<squealy::ColumnExprAst<CounterCount>, squealy::LiteralExprAst<{integer}>>>,)>`
